2006-09-15  David Ayers  <d.ayers@inode.at>

	* Version: Update to 1.3.0
	* config.mak.in: Update to use new GDL2 native library names.
	
2006-09-14  David Ayers  <d.ayers@inode.at>

	* Branch 1.2 release series.
	
2006-01-26  David Ayers  <d.ayers@inode.at>

	* GSWeb.framework/GSWAction.m (-[initWithRequest:]): Retain
	context.
	* GSWeb.framework/GSWActionRequestHandler.m 
	(-[getActionInstanceOfClass:withRequest:): Autorelease action.
	
2006-01-11  David Wetzel <dave@turbocat.de>
        
        * GSWeb.framework/GSWHTMLComment.h
        * GSWeb.framework/GSWHTMLComment.m
        Removed multiple categories per file.

2005-12-19  David Ayers  <d.ayers@inode.at>

	* GSWAdaptors/Apache/mod_gsweb.c (GSWeb_Handler): Avoid endless
	loop when users abort transmission with temporary hack.
	
2005-12-17  David Ayers  <d.ayers@inode.at>

	* GSWeb.framework/GSWApplication+Defaults.m
	(GSWeb_InitializeGlobalAppDefaultOptions): Add handling for
	GSW/WOStatusLoggingEndabled-GSWOPT_StatusLoggingEnabled.
	Fix handling of user defaults.
	((UserDefaults/GSWUserDefaults)): Split category in handling
	WO45 defaults and GSWeb specific defaults.
	(+is/setStatusLoggingEnabled): New methods and default to
	control status logging.
	(-set/defaultRequestHandlerClassName): Move to GSWApplication
	class implementation as this is not handled via user defaults.
	* GSWeb.framework/GSWApplication.(h/m)
	((UserDefaults/GSWUserDefaults)): Split category in handling
	WO45 defaults and GSWeb specific defaults.
	(+is/setStatusLoggingEnabled): New methods and default to
	control status logging.
	(+set/defaultRequestHandlerClassName): Move to GSWApplication
	class implementation as this is not handled via user defaults.
	(GSWFPutSL): New local macro to consistently log NSString's to
	a stream.  Updated callers to fputs.
	(+statusDebug...): Guard all calls with +isStatusDebuggingEnabled.
	(+statusLog...): Guard all calls with +isStatusLoggingEnabled.