@@ -1,0 +1,19 @@
+<html>
+ <head>
+ <title>GSWFileUpload Test 1</title>
+</head>
+<body>
+ <h2>GSWFileUpload Test 1</h2>
+ <br/>
+ FileName : <gsweb name="FileName"></gsweb><br/>
+ FileSize : <gsweb name="FileSize"></gsweb><br/>
+ FileContent : <gsweb name="FileContent"></gsweb><br/>
+ <br/>
+ <gsweb name="Form">
+  <gsweb name="AFileUpload"></gsweb>
+  <gsweb name="SubmitButton"></gsweb>
+ </gsweb>
+ <hr/>
+ <gsweb name="MainPageLink"></gsweb>
+</body>
+</html>
