@@ -1,3 +1,14 @@
+2006-10-04  David Ayers  <ayers@fsfe.org>
+
+	* Testing/DynamicElements/FileUpload1Page.gswc/FileUpload1Page.gswd
+	* Testing/DynamicElements/FileUpload1Page.gswc/FileUpload1Page.html
+	* Testing/DynamicElements/FileUpload1Page.h
+	* Testing/DynamicElements/FileUpload1Page.m: New tests.
+	
+	* Testing/DynamicElements/Resources/Info-DynamicElements.plist
+	* Testing/DynamicElements/GNUmakefile:
+	Add FileUpload tests.  Do not install tests in GNUSTEP_SYSTEM_ROOT.
+
 2006-09-15  David Ayers  <d.ayers@inode.at>
 
 	* Version: Update to 1.3.0
